Bug 1258086 - Clear unbuffered SHM images with a 32-bit visual before drawing with the basic layer manager. r=lsalzman

MozReview-Commit-ID: 8XgVwvBDZ3X